--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 @charset "utf-8";
 /* CSS Document */
 
-img, embed, object, video {
+/* img, embed, object, video {
   max-width: 100%;
   min-width: 100%;
-}
+} */
 
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
@@ -12,6 +12,7 @@ body,td,th,p{
 	color: #333;
 	/* line-height: 1.5; */
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
@@ -19,37 +20,44 @@ body {
   display: block;
   display: space-between;
 }
+
 ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 100%;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
+
 a:hover, a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
+
 a img{
 	border: none 0px #fff;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: Arial, Helvetica, sans-serif;
   margin: 20px;
-  padding: 40px;
   min-width: 100%;
   min-height: 100%;
 }
+
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   display: block;
  
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
 }
+
 #footer {
   background-color: #444;
   color: #aaa;
@@ -58,24 +66,30 @@ article, aside, canvas, details, figcaption, figure, footer, header, hgroup, men
   padding: 25px;
   text-align: center;
   text-transform: uppercase;
+  min-height: 1%;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   width: 100%;
-  height: 80px;
   background-color: #252831;
   text-align:center;
+  padding-top: 6%;
+  padding-bottom: 6%;
 }
+
 nav h1 {
   margin: auto;
 }
+
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
+  font-size: 100%;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -117,16 +131,21 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
   background-color: #3397DB;
   align-items: center;
 }
+
+.filter-dropdown {
+  text-align: center;
+}
+
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
   font-weight: normal;
   line-height: 1;
-  margin: 0 20px;
+  margin: 0;
+  padding-top: 3%;
+  text-align: center;
 }
 .filter-options select {
   background-color: white;
@@ -152,11 +171,11 @@ nav h1 a {
   background-color: #fff;
   border: 2px solid #ccc;
   font-family: Arial,sans-serif;
-  margin: 15px;
+  margin: 3% auto;
   min-height: 380px;
   padding: 0 30px 25px;
   text-align: left;
-  width: 270px;
+  width: 50%;
 }
 #restaurants-list .restaurant-img {
   background-color: #ccc;
@@ -202,10 +221,9 @@ nav h1 a {
 }
 .inside #map-container {
   background: blue none repeat scroll 0 0;
-  height: 87%;
+  height: 100%;
   position: fixed;
   right: 0;
-  top: 80px;
   width: 50%;
 }
 .inside #map {
@@ -216,7 +234,7 @@ nav h1 a {
 .inside #footer {
   bottom: 0;
   position: absolute;
-  width: 50%;
+  width: 93%;
 }
 #restaurant-name {
   color: #f18200;
@@ -227,6 +245,7 @@ nav h1 a {
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
+  padding-top: 5%;
 }
 #restaurant-img {
 	width: 90%;
@@ -245,7 +264,7 @@ nav h1 a {
   padding: 2px 0;
   text-align: center;
   text-transform: uppercase;
-	width: 90%;
+	width: 100%;
 }
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
@@ -254,7 +273,8 @@ nav h1 a {
   width: 50%;
 }
 #reviews-container {
-  padding: 30px 40px 80px;
+  padding: 5%;
+  /* 30px 40px 80px; */
 }
 #reviews-container h2 {
   color: #f58500;
@@ -274,7 +294,6 @@ nav h1 a {
   list-style-type: none;
   margin: 0 0 30px;
   overflow: hidden;
-  padding: 0 20px 20px;
   position: relative;
   width: 85%;
 }
@@ -283,4 +302,10 @@ nav h1 a {
 }
 #restaurant-hours td {
   color: #666;
+}
+
+@media only screen and (max-width: 550px) and (min-width: 0px) {
+  #restaurants-list {
+    min-height: 20%;
+  }
 }
